# thoughtful-ai-screen

./: README.md
.github/workflows/: ci-release.yaml
lambdas/: Dockerfile.lambdas  pyproject.toml
lambdas/src/lib/: helpers.py  logger.py
lambdas/src/package_sorter/: handler.py
lambdas/tests/: test_package_sorter.py
terraform/: ecr.tf  iam.tf  lambda.tf  main.tf  variables.tf
test-payload/: payload.json
workflows/: ci-release.yaml
